@@ -10,7 +10,7 @@ eggs = tl.eggdeps
 # The following example arguments turn on dot file output and printing of
 # version numbers, turn off extras, and make the setuptools egg be ignored:
 #
-# arguments = dot=True, print_version=True, extras=False,
+# arguments = dot=True, version_numbers=True, extras=False,
 #             ignore=["setuptools"]
 
 [test]
