@@ -2,12 +2,12 @@
 # See also LICENSE.txt
 
 
-def print_subgraph(graph, mount_points, path, print_version=False):
+def print_subgraph(graph, mount_points, path, version_numbers=False):
     name = path[-1]
     print_tree = path == mount_points[name]
     node = graph[name]
 
-    if print_version and node.dist:
+    if version_numbers and node.dist:
         name_string = "%s %s" % (node.name, node.dist.version)
     else:
         name_string = node.name
@@ -34,7 +34,7 @@ def print_subgraph(graph, mount_points, path, print_version=False):
             last_extras = extras
 
         print_subgraph(graph, mount_points, path + (dep,),
-                       print_version=print_version)
+                       version_numbers=version_numbers)
 
 
 def find_mount_point(graph, mount_points, best_keys, path, sort_key):
@@ -51,7 +51,7 @@ def find_mount_point(graph, mount_points, best_keys, path, sort_key):
                           sort_key[1] + (sorted(extras), name)))
 
 
-def print_graph(graph, print_version=False):
+def print_graph(graph, version_numbers=False):
     mount_points = {}
     best_keys = {}
     for name in graph.roots:
@@ -60,4 +60,4 @@ def print_graph(graph, print_version=False):
 
     for name in sorted(graph.roots):
         print_subgraph(graph, mount_points, (name,),
-                       print_version=print_version)
+                       version_numbers=version_numbers)
